correct textinputs spacing (#70)

--- a/src/components/TextInput/styles.css
+++ b/src/components/TextInput/styles.css
@@ -15,7 +15,7 @@
 }
 
 .textinputWrapper:not(:first-child) {
-  margin-top: 2rem;
+  margin-top: 2.2rem;
 }
 
 .textinputLabel {
@@ -49,8 +49,9 @@
   visibility: hidden;
   color: var(--color-orange);
   font-size: var(--font-size-small);
-  min-height: var(--spacing-2);
-  margin-top: 2px;
+  min-height: var(--spacing-1);
+  line-height: var(--spacing-1);
+  margin-top: 1px;
 }
 
 .errorMsgActive {
@@ -62,7 +63,7 @@
   color: var(--color-orange);
   position: absolute;
   right: 0;
-  top: 4px;
+  top: 2px;
   font-size: var(--font-size-large);
 }
 
